--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
     "default_icon":"logo.png"
   },
   "icons":{
-    "128":"logo.png"
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128":"logo128.png"
 },
 "permissions":["activeTab"]
 }
