--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Domain Extractor",
   "description": "Copy Domain from website ",
-  "version": 1.0,
+  "version":"1.0",
   "manifest_version": 3,
   "browser_action":{
     "default_popup":"app.html",
