--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
-  "name": "Domain Extractor",
-  "description": "Copy Domain from website ",
-  "version":"1.0",
-  "manifest_version": 3,
-  "browser_action":{
-    "default_popup":"app.html",
-    "default_icon":"logo.png"
+  "name": "Copy Domain",
+  "version": "1.0.0",
+  "description": "Copy the Domain ",
+  "permissions": ["tabs"],
+  "action": {
+    "default_icon": {
+      "16": "logo16.png",
+      "24": "logo48.png",
+      "32": "logo128.png"
+    },
+    "default_title": "Copy Domain",
+    "default_popup": "app.html"
   },
-  "icons":{
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128":"logo128.png"
-},
-"permissions":["activeTab"]
+  "manifest_version": 3
 }
