--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Copy Domain",
   "version": "1.0.0",
   "description": "Copy the Domain ",
-  "permissions": ["tabs"],
+  "permissions": ["tabs","activeTab","clipboardWrite","clipboardRead","browsingData","declarativeContent"],
   "action": {
     "default_icon": {
       "16": "logo16.png",
